--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,9 +2,11 @@
     <a href="/" class="header__logo ">Node Js</a>
     <nav class="header__nav">
         <ul>
-            <li><a href="/views/index.ejs">Home</a></li>
-            <li><a href="/views/about.ejs">About</a></li>
-            <li><a href="/views/contact.ejs">Contact</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="../about">About</a></li>
+            <li><a href="../contact">Contact</a></li>
+            <li><a href="../login">Login</a></li>
+
         </ul>
     </nav>
     <div class="header__button">
